tests/pragmas/thintoff.nim
# issue #4001
discard """
  errormsg: "invalid pragma: hint[]: off"
"""

{. hint[]: off .}
